--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 envlist =
     py{38,39,310}-django32
     py{38,39}-django42
-    py{310,311}-django{42,50,main}
+    py{310,311}-django{42,50}
     py312-django{42,50,main}
     pre-commit
 
