--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
+  "python.debugger.justMyCode": false,
+  "python.testing.pytestArgs": [
+    "--tb=short"
+  ],
   "python.testing.pytestEnabled": true,
   "python.testing.unittestEnabled": false,
   "workbench.colorTheme": "PyCharm Dark+ Theme"
