--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,9 +24,9 @@ jobs:
         python-version: '3.10'
     - name: Build wheel and source tarball
       run: |
-        pip install wheel
-        pip install twine
-        python setup.py sdist bdist_wheel
+        python -m pip install --upgrade pip
+        pip install build
+        python -m build
     - name: Publish a Python distribution to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
