chore: update dependencies and enhance documentation for argument modifications in CRUDDALS

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,5 @@
   ],
   "python.testing.pytestEnabled": true,
   "python.testing.unittestEnabled": false,
-  "workbench.colorTheme": "PyCharm Dark+ Theme"
+  "workbench.colorTheme": "Default Dark+"
 }
